manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: bookmark-app
    tier: api
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: api
  template:
    metadata:
      labels:
        tier: api
    spec:
      containers:
      - name: bookmark-app-api
        image: wajeeh8/bookmark-app:serverk8s
        imagePullPolicy: Always
