manifests/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  labels:
    tier: db
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: wajeeh8/mysqlk8s
        volumeMounts:
        - name: db-pv
          mountPath: /var/lib/mysql
      volumes:
       - name: db-pv
         persistentVolumeClaim:
           claimName: db-pvc
