manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbsvc
  labels:
    app: dbsvc
spec:
  clusterIP: None
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: db
---
apiVersion: v1
kind: Service
metadata:
  name: apisvc
spec:
  selector:
    tier: api
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: clientsvc
spec:
  type: ClusterIP
  selector:
    tier: frontend
  ports:
    - port: 80
      targetPort: 3000
