manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    #traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
spec:
  tls:
  - hosts:
     - bookmark.com
     - api.bookmark.com
    secretName: tls-secret
  rules:
  - host: bookmark.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: clientsvc
            port:
              number: 80
  - host: api.bookmark.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: apisvc
            port:
              number: 80
